# jozw

./: .gitignore  CMakeLists.txt  README.md  pom.xml
src/main/java/org/kyrillos/jozw/: InstanceAssociation.java  Main.java  Notification.java  Ozw.java  ValueId.java
src/main/native/: org_kyrillos_jozw_Ozw.cpp  org_kyrillos_jozw_Ozw.h
